--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          lfs: true
 
       - name: Setup xmake
         uses: xmake-io/github-action-setup-xmake@v1
@@ -59,6 +60,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          lfs: true
 
       - name: Setup xmake
         uses: xmake-io/github-action-setup-xmake@v1
