--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,11 @@ jobs:
           submodules: recursive
           lfs: true
 
+      - name: Setup LLVM
+        uses: ZhongRuoyu/setup-llvm@v0
+        with:
+          llvm-version: 21
+
       - name: Setup xmake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
